--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-ATLASURI=mongodb+srv://zane:root@cluster0.liwzq.gcp.mongodb.net/<dbname>?retryWrites=true&w=majority
+ATLASURI=mongodb+srv://zane:Root1996@cluster0.liwzq.mongodb.net/cluster0?retryWrites=true&w=majority
