--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-ATLASURI=mongodb+srv://zane:Root1996@cluster0.liwzq.mongodb.net/cluster0?retryWrites=true&w=majority
+ATLASURI=mongodb://zane:Root1996@cluster0-shard-00-00.liwzq.mongodb.net:27017,cluster0-shard-00-01.liwzq.mongodb.net:27017,cluster0-shard-00-02.liwzq.mongodb.net:27017/cluster0?ssl=true&replicaSet=atlas-10cnkl-shard-0&authSource=admin&retryWrites=true&w=majority
