--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install": "cd client && npm install",
-    "test": "npm run lint",
-    "start": "node index.js",
+    "start": "set PORT=8000 && react-scripts start",
     "start:dev": "concurrently \"nodemon server.js --ignore 'client/*'\" \"npm run client\"",
     "start:prod": "node server.js",
     "client": "cd client && npm start",
